--- a/app/src/main/res/layout/activity_location_detail.xml
+++ b/app/src/main/res/layout/activity_location_detail.xml
@@ -1,15 +1,17 @@
-<?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:fitsSystemWindows="true"
+    tools:context="edu.mgrace31gatech.donationtracker.app.controllers.LocationDetailActivity"
+    tools:ignore="MergeRootFrame">
 
-    <TextView
-        android:id="@+id/text1"
-        android:layout_width="wrap_content"
+
+    <android.support.v4.widget.NestedScrollView
+        android:id="@+id/location_detail_container"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text='"Description of Location"'
-        tools:layout_editor_absoluteX="115dp"
-        tools:layout_editor_absoluteY="146dp" />
-</android.support.constraint.ConstraintLayout>
+        app:layout_behavior="@string/appbar_scrolling_view_behavior" />
+
+</android.support.design.widget.CoordinatorLayout>
