--- a/app/src/main/res/layout/location_list.xml
+++ b/app/src/main/res/layout/location_list.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/dataitem_list"
-    android:name="edu.gatech.cs2340.csvfiledemo.DataItemListFragment"
+    android:name="edu.mgrace31gatech.donationtracker.app.controllers.LocationDetailActivity"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:layout_marginLeft="16dp"
@@ -11,3 +11,5 @@
     app:layoutManager="LinearLayoutManager"
     tools:context="edu.mgrace31gatech.donationtracker.app.controllers.LocationDetailActivity"
     tools:listitem="@layout/location_list_content" />
+
+
