--- a/app/src/main/res/layout/activity_location_detail.xml
+++ b/app/src/main/res/layout/activity_location_detail.xml
@@ -1,6 +1,7 @@
-<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/coordinatorLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
@@ -9,7 +10,7 @@
     tools:layout_constraintBottom_toBottomOf="parent">
 
 
-    <ScrollView
+    <FrameLayout
         android:id="@+id/location_detail_container"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
@@ -18,5 +19,19 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical" />
-    </ScrollView>
-</android.support.design.widget.CoordinatorLayout>
+    </FrameLayout>
+
+    <Button
+        android:id="@+id/inventoryButton"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="8dp"
+        android:layout_marginTop="8dp"
+        android:text="Inventory"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.733" />
+</android.support.constraint.ConstraintLayout>
