--- a/app/src/main/res/layout/inventory_list.xml
+++ b/app/src/main/res/layout/inventory_list.xml
@@ -15,6 +15,7 @@
         <android.support.v7.widget.RecyclerView
             android:id="@+id/inventory"
             android:layout_width="match_parent"
-            android:layout_height="match_parent" />
+            android:layout_height="match_parent"
+            tools:listitem="@layout/inventory_list_content" />
     </LinearLayout>
 </android.support.constraint.ConstraintLayout>
