Fixed the input of a Donation to make it possible to make the value of a donation a decimal.

--- a/app/src/main/res/layout/activity_donation.xml
+++ b/app/src/main/res/layout/activity_donation.xml
@@ -66,7 +66,7 @@
         android:layout_marginBottom="40dp"
         android:ems="10"
         android:hint="@string/value_in_dollars"
-        android:inputType="number"
+        android:inputType="numberDecimal"
         app:layout_constraintBottom_toTopOf="@+id/categorySpinner"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.502"
