--- a/app/src/main/res/layout/activity_inventory_list.xml
+++ b/app/src/main/res/layout/activity_inventory_list.xml
@@ -21,7 +21,7 @@
         android:fitsSystemWindows="true"
         app:contentScrim="?attr/colorPrimary"
         app:layout_scrollFlags="scroll|exitUntilCollapsed"
-        app:toolbarId="@drawable/ic_launcher_background">
+        app:toolbarId="@id/content">
 
         <android.support.v7.widget.Toolbar
             android:id="@+id/detail_toolbar"
