--- a/app/src/main/res/layout/location_detail.xml
+++ b/app/src/main/res/layout/location_detail.xml
@@ -26,7 +26,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="@dimen/text_margin"
-        android:text="lattitude"
+        android:text="latitude"
         android:textAppearance="?attr/textAppearanceListItem" />
 
     <TextView
