--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -17,4 +17,10 @@
 
     <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" tools:keep="@style/AppTheme_PopupOverlay" />
 
+    <style name="Base"></style>
+
+    <style name="Base.Theme">Base</style>
+
+    <style name="ThemeOverlay">ThemeOverlay</style>
+
 </resources>
