--- a/app/src/main/res/layout/donation_detail.xml
+++ b/app/src/main/res/layout/donation_detail.xml
@@ -23,42 +23,42 @@
             android:id="@+id/nameDonation"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Name" />
+            android:text="@string/name" />
 
         <TextView
             android:id="@+id/shortDescription"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Short Description" />
+            android:text="@string/short_description" />
 
         <TextView
             android:id="@+id/fullDescription"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Full Description" />
+            android:text="@string/full_description" />
 
         <TextView
             android:id="@+id/value"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Value" />
+            android:text="@string/value" />
 
         <TextView
             android:id="@+id/category"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Category" />
+            android:text="@string/category" />
 
         <TextView
             android:id="@+id/date"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Date" />
+            android:text="@string/date" />
 
         <TextView
             android:id="@+id/time"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Time" />
+            android:text="@string/time" />
     </LinearLayout>
 </android.support.constraint.ConstraintLayout>
