--- a/app/src/main/res/layout/activity_add_donation.xml
+++ b/app/src/main/res/layout/activity_add_donation.xml
@@ -12,7 +12,7 @@
     android:layout_height="wrap_content"
     android:layout_marginBottom="12dp"
     android:ems="10"
-    android:hint="Name of Item"
+    android:hint="@string/name_of_item"
     android:inputType="textPersonName"
     app:layout_constraintBottom_toTopOf="@+id/shortDescriptionBox"
     app:layout_constraintEnd_toEndOf="parent"
