--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -37,7 +37,7 @@
         app:layout_constraintStart_toStartOf="parent" />
 
     <Button
-        android:id="@+id/logInbutton"
+        android:id="@+id/logInButton"
         style="@android:style/Widget.Holo.Button"
         android:layout_width="199dp"
         android:layout_height="47dp"
@@ -51,7 +51,7 @@
         app:layout_constraintVertical_bias="0.493" />
 
     <Button
-        android:id="@+id/cancelbutton"
+        android:id="@+id/cancelButton"
         style="@android:style/Widget.Holo.Button"
         android:layout_width="199dp"
         android:layout_height="47dp"
@@ -60,7 +60,7 @@
         android:layout_marginBottom="76dp"
         android:text="@string/cancel"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/logInbutton"
+        app:layout_constraintEnd_toStartOf="@+id/logInButton"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/passWordBox" />
 
