--- a/app/src/main/res/layout/activity_registration.xml
+++ b/app/src/main/res/layout/activity_registration.xml
@@ -63,7 +63,7 @@
         app:layout_constraintVertical_bias="0.0" />
 
     <Button
-        android:id="@+id/cancelbutton"
+        android:id="@+id/cancelButton"
         style="@android:style/Widget.Holo.Button"
         android:layout_width="199dp"
         android:layout_height="47dp"
