--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -15,7 +15,7 @@
     </SearchView>
 
     <ListView
-        android:id="@+id/listview"
+        android:id="@+id/listView"
         android:layout_width="fill_parent"
         android:layout_height="468dp"
         android:layout_below="@+id/search"
