--- a/app/src/main/res/layout/activity_welcome_page.xml
+++ b/app/src/main/res/layout/activity_welcome_page.xml
@@ -22,7 +22,7 @@
         app:layout_constraintVertical_bias="0.13" />
 
     <Button
-        android:id="@+id/welcomeloginButton"
+        android:id="@+id/welcomeLoginButton"
         style="@android:style/Widget.Holo.Button"
         android:layout_width="221dp"
         android:layout_height="wrap_content"
