--- a/app/src/main/res/layout/activity_add_donation.xml
+++ b/app/src/main/res/layout/activity_add_donation.xml
@@ -12,7 +12,7 @@
     android:layout_height="wrap_content"
     android:layout_marginBottom="12dp"
     android:ems="10"
-    android:hint="@string/name_of_item"
+    android:hint="Name of Item"
     android:inputType="textPersonName"
     app:layout_constraintBottom_toTopOf="@+id/shortDescriptionBox"
     app:layout_constraintEnd_toEndOf="parent"
@@ -25,7 +25,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
         android:layout_marginBottom="32dp"
-        android:text="@string/add_donation_item"
+        android:text="Add Donation Item"
         android:textAppearance="@style/TextAppearance.AppCompat.Display1"
         app:layout_constraintBottom_toTopOf="@+id/nameDonationBox"
         app:layout_constraintEnd_toEndOf="parent"
@@ -39,7 +39,7 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="12dp"
         android:ems="10"
-        android:hint="@string/short_description_of_item"
+        android:hint="Short Description of Item"
         android:inputType="textShortMessage"
         app:layout_constraintBottom_toTopOf="@+id/fullDescriptionBox"
         app:layout_constraintEnd_toEndOf="parent"
@@ -52,7 +52,7 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="12dp"
         android:ems="10"
-        android:hint="@string/full_description_of_item"
+        android:hint="Full Description of Item"
         android:inputType="textLongMessage"
         app:layout_constraintBottom_toTopOf="@+id/valueBox"
         app:layout_constraintEnd_toEndOf="parent"
@@ -65,7 +65,7 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="40dp"
         android:ems="10"
-        android:hint="@string/value_in_dollars"
+        android:hint="Value (in dollars)"
         android:inputType="numberDecimal"
         app:layout_constraintBottom_toTopOf="@+id/categorySpinner"
         app:layout_constraintEnd_toEndOf="parent"
@@ -87,7 +87,7 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="56dp"
         android:onClick="onAddPressed"
-        android:text="@string/add"
+        android:text="Add"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
