--- a/app/src/main/res/layout/location_list.xml
+++ b/app/src/main/res/layout/location_list.xml
@@ -1,12 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.v7.widget.RecyclerView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/dataItem_list"
+    android:id="@+id/dataitem_list"
     android:name="edu.mgrace31gatech.donationtracker.app.controllers.LocationDetailActivity"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:layout_marginLeft="16dp"
     android:layout_marginRight="16dp"
+    app:layoutManager="LinearLayoutManager"
     tools:context="edu.mgrace31gatech.donationtracker.app.controllers.LocationDetailActivity"
     tools:listitem="@layout/location_list_content" />
 
