--- a/app/src/main/res/layout/location_list_content.xml
+++ b/app/src/main/res/layout/location_list_content.xml
@@ -7,10 +7,12 @@
     <TextView
         android:id="@+id/id"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:textAppearance="?attr/textAppearanceListItem" />
 
     <TextView
         android:id="@+id/content"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:textAppearance="?attr/textAppearanceListItem" />
 </LinearLayout>
